<resources>
    <string name="app_name">Learning App</string>
    <string name="logo">logo</string>
    <string name="hint_email_address">email address</string>
    <string name="hint_password">password</string>
    <string name="btn_login">Login</string>
    <string name="dont_remember_password">Don\'t Remember password?</string>
    <string name="dont_have_an_account">Don\'t have an account</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="or">or</string>
</resources>
