<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <!--    tools:context=".MainActivity"-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_flattr"
        tools:ignore="VectorDrawableCompat" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textColorHint="@color/login_form_details"
        app:hintEnabled="true"
        app:layout_constraintEnd_toStartOf="@id/guideLine_right"
        app:layout_constraintStart_toStartOf="@id/guideLine_left"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:hint="@string/hint_email_address"
            android:inputType="textEmailAddress"
            android:padding="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:hintEnabled="true"
        android:textColorHint="@color/login_form_details"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="@id/guideLine_left"
        app:layout_constraintEnd_toStartOf="@id/guideLine_right"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edittext"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="16dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="@color/login_form_details_medium"
        app:layout_constraintEnd_toStartOf="@+id/guideLine_right"
        app:layout_constraintStart_toStartOf="@+id/guideLine_left"
        app:layout_constraintTop_toBottomOf="@id/inputLayout_password" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dont_remember_password"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@id/guideLine_right"
        app:layout_constraintStart_toStartOf="@id/guideLine_left"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:focusable="true" />

    <View
        android:id="@+id/footer_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="50dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/login_form_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/footer_line"
        android:focusable="true" />

    <TextView
        android:id="@+id/tv_login_Facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableStart="@drawable/ic_if_square_facebook"
        android:drawablePadding="8dp"
        android:clickable="true"
        android:text="@string/sign_in_with_facebook"
        android:textColor="@color/login_form_details"
        app:layout_constraintBottom_toTopOf="@id/footer_line"
        app:layout_constraintEnd_toStartOf="@id/guideLine_right"
        app:layout_constraintStart_toStartOf="@id/guideLine_left"
        android:focusable="true" />

    <View
        android:id="@+id/line1"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintBottom_toTopOf="@id/tv_login_Facebook"
        app:layout_constraintEnd_toStartOf="@+id/or"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/guideLine_left"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/login_form_details"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/line1"
        app:layout_constraintEnd_toStartOf="@+id/line2"
        app:layout_constraintStart_toEndOf="@+id/line1"
        app:layout_constraintTop_toTopOf="@+id/line1" />

    <View
        android:id="@+id/line2"
        android:layout_width="120dp"
        android:layout_height="1dp"
        android:background="@color/login_form_details_medium"
        app:layout_constraintBottom_toBottomOf="@+id/or"
        app:layout_constraintEnd_toEndOf="@id/guideLine_right"
        app:layout_constraintStart_toEndOf="@+id/or"
        app:layout_constraintTop_toTopOf="@+id/or" />

</androidx.constraintlayout.widget.ConstraintLayout>
